<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FairgroundMath</string>
    <string name="home_button">Home Button</string>
    <string name="action_settings">Settings</string>
    <string name="settingsBtn">Settings</string>
    <string name="rewardsBtn">Rewards</string>
    <string name="icon_instructions">Slelct Prize</string>
    <string name="prize_box">Prize Box</string>
    <string name="title_activity_lesson">LessonActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="volume">Volume</string>
    <string name="settingsTitle">Customize Your Game</string>
    <string name="aimSpeed">Aim Speed</string>
    <string name="ballSpeed">Ball Speed</string>
    <string name="ballImg">Select Ball</string>
    <string name="targetImg">Select Target</string>
    <string name="aimImg">Select Aim</string>
    <string name="volumeLow">Volume Low</string>
    <string name="volumeMiddle">Volume Middle</string>
    <string name="volumeHigh">Volume High</string>
    <string name="aimSpeedLow">Aim Speed Low</string>
    <string name="aimSpeedMiddle">Aim Speed Middle</string>
    <string name="aimSpeedHigh">Aim Speed High</string>
    <string name="ballSpeedLow">Ball Speed Low</string>
    <string name="ballSpeedMiddle">Ball Speed Middle</string>
    <string name="ballSpeedHigh">Ball Speed High</string>
    <string name="ballImageOne">Ball Image One</string>
    <string name="ballImageTwo">Ball Image Two</string>
    <string name="ballImageThree">Ball Image Three</string>
    <string name="ballImageFour">Ball Image Four</string>
    <string name="targetImageOne">Target Image One</string>
    <string name="targetImageTwo">Target Image Two</string>
    <string name="targetImageThree">Target Image Three</string>
    <string name="targetImageFour">Target Image Four</string>
    <string name="aimImageOne">Aim Image One</string>
    <string name="aimImageTwo">Aim Image Two</string>
    <string name="aimImageThree">Aim Image Three</string>
    <string name="aimImageFour">Aim Image Four</string>
    <string name="title_activity_rewards">RewardsActivity</string>
    <string name="game_reset">Reset Game</string>

</resources>
