<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rewards_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mathsfun.fairgroundmath.RewardsFragment" >
	
     <TextView 
        android:id="@+id/rewards_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
        android:textColor="#8bbec9"
        android:textSize="20sp"
        android:layout_marginLeft="5dp"
	    android:layout_marginStart="5dp"
        android:text="@string/rewardsBtn" />
     
   <ImageView
        android:id="@+id/icon_instructions"
       	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/icon_instructions"
        android:src="@drawable/icon_instructions"
        android:layout_below="@+id/rewards_title"
        android:layout_toStartOf="@+id/prize_box"
   		android:layout_toLeftOf="@+id/prize_box"
        android:layout_marginTop="10dp"/>
    
   <ImageView
	    android:id="@+id/prize_box"
	   	android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:contentDescription="@string/prize_box"
	    android:src="@drawable/prize_box"
        android:layout_toEndOf="@+id/rewards_title"
   		android:layout_toRightOf="@+id/rewards_title"
	    android:layout_marginLeft="10dp"
	    android:layout_marginStart="10dp"/>

    <ImageButton 
        android:id="@+id/homeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/home_button"
        android:background="@null"
		android:src="@drawable/home_button"
		android:layout_marginRight="15dp"
		android:layout_marginEnd="15dp"
		android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"/>
    
    <RelativeLayout
	    android:id="@+id/rewardsLayout"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
		android:orientation="vertical" >
	</RelativeLayout>

</RelativeLayout>
