<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c55425"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mathsfun.fairgroundmath.SettingsFragment" >

    <RelativeLayout
	    android:id="@+id/settingsLayout"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
		android:orientation="vertical" >
		
        <ImageView
            android:id="@+id/settings_icon_start"
	       	android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/settingsBtn"
	        android:src="@drawable/wrench"
	        android:layout_alignParentTop="true"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentStart="true"/>
        <ImageView
            android:id="@+id/settings_icon"
	       	android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/settingsBtn"
	        android:src="@drawable/wrench"
	        android:layout_toEndOf="@+id/settings_icon_start"
    		android:layout_toRightOf="@+id/settings_icon_start"/>

        <ImageButton 
            android:id="@+id/homeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/home_button"
            android:background="@null"
			android:src="@drawable/home_button"
			android:layout_alignParentTop="true"
			android:layout_alignParentRight="true"
	        android:layout_alignParentEnd="true"/>
        
        <TextView
            android:id="@+id/settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_below="@+id/homeBtn"
            android:textColor="#8bbec9"
            android:textSize="20sp"
            android:text="@string/settingsTitle" />
        
         <LinearLayout
		    android:id="@+id/volume_title"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/settings_title"
		    android:paddingTop="5dp"
		    android:paddingBottom="5dp"
		    android:layout_marginTop="20dp"
		    android:layout_marginBottom="10dp"
			android:orientation="horizontal" >
	        <ImageView
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="2"
		        android:contentDescription="@string/volume"
		        android:src="@drawable/volume_instructions" />
	        <TextView
	            android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="2"
	            android:text="@string/volume"
	            android:textColor="#8bbec9"
	            android:textSize="20sp" />
        </LinearLayout>

         <ImageView
            android:id="@+id/volume_slider_instructions"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/volume_title"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentStart="true"
	        android:contentDescription="@string/volumeLow"
	        android:src="@drawable/slider_instructions" />
        
        <SeekBar
            android:id="@+id/volume_bar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/volume_title"
            android:layout_toEndOf="@+id/volume_slider_instructions"
    		android:layout_toRightOf="@+id/volume_slider_instructions"/>

        <LinearLayout
		    android:id="@+id/volumeLayout"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="10dp"
		    android:layout_marginBottom="20dp"
		    android:paddingTop="5dp"
		    android:paddingBottom="5dp"
		    android:layout_toEndOf="@+id/volume_slider_instructions"
    		android:layout_toRightOf="@+id/volume_slider_instructions"
		    android:background="#fff"
		    android:layout_below="@+id/volume_bar"
			android:orientation="horizontal" >
	      <ImageView
	            android:id="@+id/volume_low"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:contentDescription="@string/volumeLow"
		        android:src="@drawable/volume_one" />	        
	        <ImageView
	            android:id="@+id/volume_mid_low"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:contentDescription="@string/volumeMiddle"
		        android:src="@drawable/volume_two" />	        
	        <ImageView
	            android:id="@+id/volume_mid"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:contentDescription="@string/volumeHigh"
		        android:src="@drawable/volume_three" />
	        <ImageView
	            android:id="@+id/volume_mid_high"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:contentDescription="@string/volumeHigh"
		        android:src="@drawable/volume_four" />
	        <ImageView
	            android:id="@+id/volume_high"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:contentDescription="@string/volumeHigh"
		        android:src="@drawable/volume_five" />
		</LinearLayout>
		
        <LinearLayout
		    android:id="@+id/aimSpeedTitle"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/volumeLayout"
		    android:paddingTop="5dp"
		    android:paddingBottom="5dp"
		    android:layout_marginTop="20dp"
		    android:layout_marginBottom="10dp"
			android:orientation="horizontal" >
	        <ImageView
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="2"
		        android:contentDescription="@string/aimSpeed"
		        android:src="@drawable/aim_instructions" />
	        <TextView
	            android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="2"
	            android:text="@string/aimSpeed"
	            android:textColor="#8bbec9"
	            android:textSize="20sp" />
        </LinearLayout>
        
        <ImageView
            android:id="@+id/aim_speed_slider_instructions"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/aimSpeedTitle"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentStart="true"
	        android:contentDescription="@string/aimSpeed"
	        android:src="@drawable/slider_instructions" />
        <SeekBar
            android:id="@+id/aim_speed_bar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/aimSpeedTitle"
            android:layout_toEndOf="@+id/aim_speed_slider_instructions"
    		android:layout_toRightOf="@+id/aim_speed_slider_instructions"/>            
  		<LinearLayout
		    android:id="@+id/aimSpeedLayout"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/aim_speed_bar"
		    android:paddingTop="5dp"
		    android:paddingBottom="5dp"
		    android:layout_toEndOf="@+id/aim_speed_slider_instructions"
    		android:layout_toRightOf="@+id/aim_speed_slider_instructions"
		    android:layout_marginTop="10dp"
		    android:layout_marginBottom="20dp"
		    android:background="#fff"
			android:orientation="horizontal" >
	       	<ImageView
	       	    android:id="@+id/aim_speed_low"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="3"
		        android:contentDescription="@string/aimSpeed"
		        android:src="@drawable/stickman_one" />	        
	        <ImageView
	            android:id="@+id/aim_speed_mid_low"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="3"
		        android:contentDescription="@string/aimSpeed"
		        android:src="@drawable/stickman_two" />	        
	        <ImageView
	            android:id="@+id/aim_speed_mid"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="3"
		        android:contentDescription="@string/aimSpeed"
		        android:src="@drawable/stickman_three" />
		    <ImageView
		        android:id="@+id/aim_speed_mid_high"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="3"
		        android:contentDescription="@string/aimSpeed"
		        android:src="@drawable/stickman_four" />
	        <ImageView
	            android:id="@+id/aim_speed_high"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="3"
		        android:contentDescription="@string/aimSpeed"
		        android:src="@drawable/stickman_five" />
		</LinearLayout>
        
  		<LinearLayout
		    android:id="@+id/ball_speed_title"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/aimSpeedLayout"
		    android:paddingTop="5dp"
		    android:paddingBottom="5dp"
		    android:layout_marginTop="20dp"
		    android:layout_marginBottom="10dp"
			android:orientation="horizontal" >
	        <ImageView
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="2"
		        android:contentDescription="@string/ballSpeed"
		        android:src="@drawable/ball_instructions" />
	        <TextView
	            android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="2"
	            android:text="@string/ballSpeed"
	            android:textColor="#8bbec9"
	            android:textSize="20sp" />
        </LinearLayout> 
  		

       	<ImageView
            android:id="@+id/ball_speed_slider_instructions"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/ball_speed_title"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentStart="true"
	        android:contentDescription="@string/ballSpeed"
	        android:src="@drawable/slider_instructions" />
        <SeekBar
            android:id="@+id/ball_speed_bar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ball_speed_title"
            android:layout_toEndOf="@+id/ball_speed_slider_instructions"
    		android:layout_toRightOf="@+id/ball_speed_slider_instructions"/>        
        <LinearLayout
		    android:id="@+id/ballSpeedLayout"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="#fff"
		    android:paddingTop="5dp"
		    android:paddingBottom="5dp"
		    android:layout_toEndOf="@+id/ball_speed_slider_instructions"
    		android:layout_toRightOf="@+id/ball_speed_slider_instructions"
		    android:layout_marginTop="10dp"
		    android:layout_marginBottom="20dp"
		    android:layout_below="@+id/ball_speed_bar"
			android:orientation="horizontal" >
	        <ImageView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:contentDescription="@string/ballSpeed"
		        android:src="@drawable/stickman_one" />	        
	        <ImageView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:contentDescription="@string/ballSpeed"
		        android:src="@drawable/stickman_two" />	        
	        <ImageView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:contentDescription="@string/ballSpeed"
		        android:src="@drawable/stickman_three" />
		    <ImageView
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_weight="1"
		        android:contentDescription="@string/ballSpeed"
		        android:src="@drawable/stickman_four" />
	        <ImageView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:contentDescription="@string/ballSpeed"
		        android:src="@drawable/stickman_five" />
		</LinearLayout>
        
        <ImageView
            android:id="@+id/ball_select_slider_instructions"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/ballSpeedLayout"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentStart="true"
	        android:paddingTop="30dp"
	        android:contentDescription="@string/ballImg"
	        android:src="@drawable/icon_instructions" />
        <TextView
            android:id="@+id/ballImgsLayout_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ballSpeedLayout"
			android:layout_toEndOf="@+id/ball_select_slider_instructions"
    		android:layout_toRightOf="@+id/ball_select_slider_instructions"
    		android:paddingLeft="20dp"
    		android:paddingStart="20dp"
    		android:paddingEnd="0dp"
    		android:paddingRight="0dp"
            android:paddingTop="30dp"
            android:text="@string/ballImg"
            android:textColor="#8bbec9"
            android:textSize="20sp" />           
        <LinearLayout 
		    android:id="@+id/ballImgsLayout"
		    android:paddingTop="10dp"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/ballImgsLayout_title"
			android:orientation="horizontal" >
		</LinearLayout>
		
        <ImageView
            android:id="@+id/target_select_slider_instructions"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/ballImgsLayout"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentStart="true"
	        android:paddingTop="30dp"
	        android:contentDescription="@string/targetImg"
	        android:src="@drawable/icon_instructions" />
        <TextView
            android:id="@+id/targetImgsLayout_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ballImgsLayout"
	        android:layout_toEndOf="@+id/target_select_slider_instructions"
    		android:layout_toRightOf="@+id/target_select_slider_instructions"
    		android:paddingLeft="20dp"
    		android:paddingStart="20dp"
    		android:paddingEnd="0dp"
    		android:paddingRight="0dp"
            android:paddingTop="30dp"
            android:text="@string/targetImg"
            android:textColor="#8bbec9"
            android:textSize="20sp" />
        <LinearLayout 
		    android:id="@+id/targetImgsLayout"
		    android:paddingTop="10dp"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/targetImgsLayout_title"
			android:orientation="horizontal" >
		</LinearLayout>
        
        <ImageView
            android:id="@+id/aim_select_slider_instructions"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/targetImgsLayout"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentStart="true"
	        android:paddingTop="30dp"
	        android:contentDescription="@string/aimImg"
	        android:src="@drawable/icon_instructions" />
        <TextView
            android:id="@+id/aimImgsLayout_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/targetImgsLayout"
	        android:layout_toEndOf="@+id/aim_select_slider_instructions"
    		android:layout_toRightOf="@+id/aim_select_slider_instructions"
    		android:paddingLeft="20dp"
    		android:paddingStart="20dp"
    		android:paddingEnd="0dp"
    		android:paddingRight="0dp"
            android:paddingTop="30dp"
            android:text="@string/aimImg"
            android:textColor="#8bbec9"
            android:textSize="20sp" />
        <LinearLayout 
		    android:id="@+id/aimImgsLayout"
		    android:paddingTop="10dp"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/aimImgsLayout_title"
			android:orientation="horizontal" >
		</LinearLayout>
		
        <Button
            android:id="@+id/resetGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/aimImgsLayout"
            android:layout_marginTop="70dp"
			android:text="@+string/game_reset"
            android:textColor="#000"
            android:background="#FF0000"
            android:textSize="12sp"/> 
        
	</RelativeLayout>
</ScrollView>
